<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/welcome_screen_bg"
    tools:context="aldwin.tablante.com.swoosh.MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/swoosh_logo"
        android:layout_marginTop="16dp"

        android:contentDescription=""
        tools:ignore="ContentDescription" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="58sp"
        android:textAllCaps="true"
       android:layout_weight="0"
        android:layout_gravity="center"
        android:layout_marginTop="46sp"
        android:text="@string/Title1"
        android:textColor="@color/textcol"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginTop="6sp"
        android:text="@string/Title3"
        android:textColor="@color/textcol"
        android:layout_weight="0"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="254dp"
        android:layout_height="wrap_content"

        android:layout_gravity="center"
        android:layout_marginTop="12sp"
        android:layout_weight="1"
        android:text="@string/Title2"
        android:textAlignment="center"
        android:textColor="@color/textcol"
        android:textSize="16sp" />

    <Button
        android:id="@+id/main"
        android:onClick="main1"
        android:layout_width="247sp"
        android:layout_height="wrap_content"
        android:text="@string/next"
   android:layout_gravity="center"
   android:alpha="0.6"

        android:textColor="@color/textcol"
        android:background="@drawable/button"/>




</LinearLayout>
